--- a/app/templates/pages/catalog-products.pug
+++ b/app/templates/pages/catalog-products.pug
@@ -38,7 +38,7 @@ block content
             .products-el-img.visual-animation-base-block
               img(src="./images/img-products-1-min.png")
               img(src="./images/img-products-1-min.png")
-            .products-el-title.visual-animation-base Сыр «Охотничий» копченый
+            .products-el-title.visual-animation-base Сыр <br> «Охотничий» копченый
             .products-el-hover.visual-animation-base-block
               +icon('rhombus', 'svg').rhombus-1
               +icon('rhombus', 'svg').rhombus-2
@@ -47,8 +47,8 @@ block content
 
           a.products-el(href="./product.html")
             .products-el-img.visual-animation-base-block
-              img(src="./images/img-products-2-min.png")
-              img(src="./images/img-products-2-min.png")
+              img(src="./images/img-products-2-min-new.png")
+              img(src="./images/img-products-2-min-new.png")
             .products-el-title.visual-animation-base Сыр Косичка «Гиагинский» копченый
             .products-el-hover
               +icon('rhombus', 'svg').rhombus-1
