--- a/app/scss/components/products/products.scss
+++ b/app/scss/components/products/products.scss
@@ -192,7 +192,7 @@
         height: 396px;
         display: block;
         content: "";
-        opacity: 1; //временно
+        opacity: 0; //временно
         transition: opacity .3s;
       }
 
@@ -297,6 +297,7 @@
         z-index: 2;
         margin-left: 133px;
         height: 200px;
+        margin-top: 40px;
 
         @include screen('sm', 'max') {
           padding: 0px 0px;
@@ -307,25 +308,42 @@
       &-img {
         position: relative;
         z-index: 2;
-        text-align: center;
+        left: 6%;
+        top: 2%;
 
         @include screen('sm', 'max') {
           width:100%;
           object-fit:cover;
         }
+
+        &::after {
+          background: url('../images/shadow-products.svg') no-repeat;
+          background-position: bottom;
+          position: absolute;
+          content: "";
+          display: block;
+          width: 100%;
+          height: 100%;
+          bottom: -15%;
+          left: -50%;
+          transform: translateX(50%);
+        }
         
         img {
-          max-width:60%;
+          width: 68%;
           height: auto;
 
           @include screen('xs', 'max') {
-            max-width:60%;
+            width: 70%;
             object-fit:cover;
           }
 
+          &.orbis {
+            filter: drop-shadow(0px 12px 0px #FFF) drop-shadow(-6px -7px 0px #fff) drop-shadow(9px -2px 0px #fff);
+          }
+
           &:first-child {
-            left: 3%;
-            z-index: 1;
+            left: 20%;
             position: absolute;
           }
         }
