--- a/app/scss/components/products/products.scss
+++ b/app/scss/components/products/products.scss
@@ -176,177 +176,80 @@
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 137px;
     grid-row-gap: 116px;
-    .products-el {
+  }
+
+  .products-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
+    position: relative;
+    justify-content: flex-start;
+    align-items: center;
+
+    &::before {
+      position: absolute;
+      top: 10%;
+      left: 12%;
+      background: #ffe3be;
+      transform: rotate(45deg);
+      width: 396px;
+      height: 396px;
+      display: block;
+      content: "";
+      opacity: 1;
+      transition: opacity .3s;
+      z-index: 1;
+    }
+
+    & > .products-img {
       position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      width: 100%;
-      &::before {
+      width: 361px;
+      z-index: 2;
+      height: 500px;
+
+      &::after {
+        background: url('../images/shadow-products.svg') no-repeat;
+        background-position: bottom;
         position: absolute;
-        bottom: 10%;
-        left: 36%;
-        background: #ffe3be;
-        transform: rotate(45deg) translateX(-50%);
-        width: 396px;
-        height: 396px;
-        display: block;
         content: "";
-        opacity: 0; //временно
-        transition: opacity .3s;
+        display: block;
+        width: 100%;
+        height: 100%;
+        bottom: -5%;
+        left: -50%;
+        transform: translateX(50%);
       }
 
-      &-hover{
-        opacity: 0;
+      img {
         position: absolute;
-        width: 396px;
-        pointer-events: none;
-        height: 100%;
-        z-index: 5;
-        transition: opacity 0.3s;
-        bottom: -10%;
-        @mixin hover-el {
-          position: absolute;
+        width: auto;
+        height: 431px;
+        margin-left: -10%;
+
+        &:first-child {
           z-index: 10;
         }
-        .rhombus-1 {
-          @include hover-el;
-          bottom: 30%;
-          font-size: 6px;
-          transition: transform .2s ease-out;
-        }
 
-        .rhombus-2 {
-          @include hover-el;
-          top: 8%;
-          font-size: 3px;
-          transition: transform .3s ease-out;
-        }
-
-        .cloud-1 {
-          @include hover-el;
-          top: 8%;
-          transition: transform .4s ease-out;
-        }
-
-        .cloud-2 {
-          @include hover-el;
-          bottom: 44%;
-          transition: transform .4s ease-out;
+        &:last-child {
+          left: 30%;
         }
       }
-      &:nth-child(2n-1){
-        .products-el-hover{
-          .rhombus-1{
-            left: 0;
-            transform: translate(-100%,-50%);
-          }
-          .rhombus-2{
-            right: 0;
-            transform: translate(100px,-50%);
-          }
-          .cloud-1{
-            left: 10%;
-            transform: translate(-100%,-50%);
-          }
-          .cloud-2{
-            right: 10%;
-            transform: translate(100px,-50%);
-          }
-        }
-      }
-      &:nth-child(2n){
-        .products-el-hover{
-          .rhombus-1{
-            right: 0;
-            transform: translate(100px,-50%);
-          }
-          .rhombus-2{
-            left: 0;
-            transform: translate(-100%,-50%);
-          }
-          .cloud-1{
-            right: 10%;
-            transform: translate(100px,-50%);
-          }
-          .cloud-2{
-            left: 10%;
-            transform: translate(-100%,-50%);
-          }
-        }
-      }
-      &:nth-child(2n),&:nth-child(2n-1){
-        &:hover{
-          &:before{
-            opacity: 1;
-          }
-          .products-el-title {
-            color: #EE7754;
-          }
-          .products-el-hover{
-            opacity: 1;
-            .rhombus-1,.rhombus-2,.cloud-1,.cloud-2{
-              transform: translateX(0) translateY(-50%);
-            }
-          }
-        }
-      }
-      &-title {
-        @include UI-Font-PFRegalTextPro-bold;
-        position: relative;
-        z-index: 2;
-        margin-left: 133px;
-        height: 200px;
-        margin-top: 40px;
+    }
 
-        @include screen('sm', 'max') {
-          padding: 0px 0px;
-          height: 50px;
-        }
-      }
+    & > .products-title {
+      width: 361px;
+      margin: 0 auto;
+      @include UI-Font-PFRegalTextPro-bold;
+      z-index: 2;
+    }
+    
+    & > .products-hover {
+      position: relative;
 
-      &-img {
-        position: relative;
-        z-index: 2;
-        left: 6%;
-        top: 2%;
-
-        @include screen('sm', 'max') {
-          width:100%;
-          object-fit:cover;
-        }
-
-        &::after {
-          background: url('../images/shadow-products.svg') no-repeat;
-          background-position: bottom;
-          position: absolute;
-          content: "";
-          display: block;
-          width: 100%;
-          height: 100%;
-          bottom: -15%;
-          left: -50%;
-          transform: translateX(50%);
-        }
-        
-        img {
-          width: 68%;
-          height: auto;
-
-          @include screen('xs', 'max') {
-            width: 70%;
-            object-fit:cover;
-          }
-
-          &.orbis {
-            filter: drop-shadow(0px 12px 0px #FFF) drop-shadow(-6px -7px 0px #fff) drop-shadow(9px -2px 0px #fff);
-          }
-
-          &:first-child {
-            left: 20%;
-            position: absolute;
-          }
-        }
+      .rhombus-1, .rhombus-2, .cloud-1, .cloud-2 {
+        position: absolute;
+        opacity: 0;
       }
     }
   }
