--- a/app/templates/layouts/default.pug
+++ b/app/templates/layouts/default.pug
@@ -24,6 +24,8 @@ html(lang="ru")
             include ../modules/footer
         .modal
             .modal-content
+                a#controlModal
+                    span
                 +askQuestionFormModal()
         #scroll-box-events
         script(src='js/scripts.min.js')
