--- a/app/scss/components/products/products.scss
+++ b/app/scss/components/products/products.scss
@@ -176,16 +176,128 @@
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 137px;
     grid-row-gap: 116px;
+
+    @include screen('md', 'max') {
+      grid-template-columns: 100%;
+      grid-column-gap: 0;
+      grid-row-gap: 50px; 
+    }
+  }
+
+  .products-container:nth-child(odd) {
+    & > .products-hover {
+      .rhombus-1 {
+        bottom: 31%;
+        font-size: 7px;
+        left: -15%;
+        transition: transform .4s ease-out;
+      }
+
+      .rhombus-2 {
+        right: 0%;
+        font-size: 4px;
+        top: 25%;
+        transition: transform .4s ease-out;
+      }
+
+      .cloud-1 {
+        top: 18%;
+        left: -6%;
+        transition: transform .4s ease-out;
+      }
+
+      .cloud-2 {
+        right: -12%;
+        bottom: 40%;
+        transition: transform .4s ease-out;
+      }
+    }
+
+    &:hover {
+      & > .products-hover {
+        .rhombus-1, .cloud-1 {
+          transform: translate(100px,-50%);
+        }
+
+        .rhombus-2, .cloud-2 {
+          transform: translate(-100%,-50%);
+        }
+      }
+    }
+  }
+
+  .products-container:nth-child(even) {
+    & > .products-hover {
+      .rhombus-1 {
+        bottom: 60%;
+        font-size: 7px;
+        left: -13%;
+        transition: transform .4s ease-out;
+      }
+
+      .rhombus-2 {
+        right: 4%;
+        font-size: 4px;
+        bottom: 35%;
+        transition: transform .4s ease-out;
+      }
+
+      .cloud-1 {
+        top: 7%;
+        left: 8%;
+        transition: transform .4s ease-out;
+      }
+
+      .cloud-2 {
+        right: -10%;
+        bottom: 64%;
+        transition: transform .4s ease-out;
+      }
+    }
+
+    &:hover {
+      & > .products-hover {
+        .rhombus-1, .cloud-1 {
+          transform: translate(100px,-50%);
+        }
+
+        .rhombus-2, .cloud-2 {
+          transform: translate(-100%,-50%);
+        }
+      }
+    }
   }
 
   .products-container {
     width: 100%;
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
     position: relative;
     justify-content: flex-start;
     align-items: center;
+    transition: .3s color;
+
+    @include screen('sm', 'max') {
+      align-items: flex-start;
+    }
+
+    &:hover {
+      &::before {
+        opacity: 1;
+      }
+
+      & > .products-hover {
+        opacity: 1;
+
+        .rhombus-1, .rhombus-2, .cloud-1, .cloud-2 {
+          transform: translateX(0) translateY(-50%);
+        }
+      }
+
+      .products-title {
+        color: #EE7754;
+      }
+    }
 
     &::before {
       position: absolute;
@@ -197,7 +309,7 @@
       height: 396px;
       display: block;
       content: "";
-      opacity: 1;
+      opacity: 0;
       transition: opacity .3s;
       z-index: 1;
     }
@@ -207,6 +319,11 @@
       width: 361px;
       z-index: 2;
       height: 500px;
+
+      @include screen('sm', 'max') {
+        width: 100%;
+        height: auto;
+      }
 
       &::after {
         background: url('../images/shadow-products.svg') no-repeat;
@@ -219,6 +336,10 @@
         bottom: -5%;
         left: -50%;
         transform: translateX(50%);
+
+        @include screen('md', 'max') {
+          display: none;
+        }
       }
 
       img {
@@ -227,29 +348,53 @@
         height: 431px;
         margin-left: -10%;
 
+        @include screen('sm', 'max') {
+          position: relative;
+          width: 70%;
+          height: auto;
+          margin-left: 0%;
+        }
+
         &:first-child {
           z-index: 10;
         }
 
         &:last-child {
           left: 30%;
+          @include screen('sm', 'max') {
+            position: absolute;
+          }
         }
       }
     }
 
     & > .products-title {
-      width: 361px;
+      max-width: 361px;
       margin: 0 auto;
       @include UI-Font-PFRegalTextPro-bold;
       z-index: 2;
+
+      @include screen('sm', 'max') {
+        margin: 0;
+        text-align: left;
+        max-width: 100%;
+      }
     }
     
     & > .products-hover {
-      position: relative;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+
+      @include screen('md', 'max') {
+        display: none;
+      }
 
       .rhombus-1, .rhombus-2, .cloud-1, .cloud-2 {
         position: absolute;
-        opacity: 0;
+        z-index: 10;
+        transition: transform .2s ease-out;
       }
     }
   }
