--- a/app/scss/components/index/promo.scss
+++ b/app/scss/components/index/promo.scss
@@ -126,7 +126,7 @@
 
           p {
             font-size: 20px;
-            line-height: 32px;
+            line-height: 30px; //было 32 (16.04.2019)
             margin-bottom: 30px;
             width: 90%;
 
@@ -366,7 +366,7 @@
 
           & > p {
             font-size: 20px;
-            line-height: 32px;
+            line-height: 30px; //было 32 (16.04.2019)
             font-family: 'CeraPro';
             margin-bottom: 18px;
 
