--- a/app/templates/pages/politics.pug
+++ b/app/templates/pages/politics.pug
@@ -10,7 +10,7 @@ block variables
 
 block content
   +header()
-  section.main-simplepage.bg-additional
+  section.main-simplepage.bg-additional.waveSection-bottom(data-color="#f7f7f7")
     .content.main-simplepage-header
       h2 Политика конфиденциальности
   .main-simplepage-content
