[UPDATE] Исправления страниц, деплой

--- a/app/scss/components/404/page.scss
+++ b/app/scss/components/404/page.scss
@@ -21,7 +21,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    background-image: url(../images/404_circle.svg);
+    background-image: url('../images/404_circle.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
@@ -30,7 +30,7 @@
   &-4 {
     width: 235px;
     height: 388px;
-    background-image: url(../images/4.svg);
+    background-image: url('../images/4.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
