--- a/app/templates/pages/catalog-products.pug
+++ b/app/templates/pages/catalog-products.pug
@@ -5,7 +5,7 @@ include ../modules/footer.pug
 include ../modules/header.pug
 
 block variables
- -var pageTitle='Вытяжные'
+ -var pageTitle='Каталог продуктов'
 
 mixin products-list(json)
   each data in json
