--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -89,20 +89,19 @@ block content
         h2.page-title.visual-animation-base Новости
         +link('Все новости', './news_list.html', 'true')
       .news-row.visual-animation-base-block
-        a.news-item(style="--color_rect: #FFF3D6" 
-          href="./news_list.html")
+        a.news-item(style="--color_rect: #FFF3D6" href="./news_detail.html")
           .news-item-image
             img(src="./images/news-background-1.jpg" alt="Новость 1")
           .news-content
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_list.html")
+        a.news-item(href="./news_detail.html")
           .news-content
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_list.html")
+        a.news-item(href="./news_detail.html")
           .news-content
             .news-time 25.05. 
               span 2019
