--- a/app/templates/pages/partners.pug
+++ b/app/templates/pages/partners.pug
@@ -25,7 +25,7 @@ mixin prevs-row-el(json)
 
 mixin main-partners-box-nav-el(json)
   each data in json
-    if(data.link == selectPage)
+    if(data.activedata == selectPage)
       a.main-partners-box-nav-link(href=data.link).active #{data.title}
     else
       a.main-partners-box-nav-link(href=data.link) #{data.title}
