--- a/app/scss/base/pngSprite.scss
+++ b/app/scss/base/pngSprite.scss
@@ -11,15 +11,15 @@
 // $spritesheet: width height image $spritesheet-sprites;
 $icon-catalog-product-2-name: 'icon-catalog-product-2';
 $icon-catalog-product-2-x: 0px;
-$icon-catalog-product-2-y: 210px;
+$icon-catalog-product-2-y: 52px;
 $icon-catalog-product-2-offset-x: 0px;
-$icon-catalog-product-2-offset-y: -210px;
+$icon-catalog-product-2-offset-y: -52px;
 $icon-catalog-product-2-width: 125px;
 $icon-catalog-product-2-height: 107px;
 $icon-catalog-product-2-total-width: 125px;
-$icon-catalog-product-2-total-height: 317px;
+$icon-catalog-product-2-total-height: 159px;
 $icon-catalog-product-2-image: '../images/sprite.png';
-$icon-catalog-product-2: (0px, 210px, 0px, -210px, 125px, 107px, 125px, 317px, '../images/sprite.png', 'icon-catalog-product-2', );
+$icon-catalog-product-2: (0px, 52px, 0px, -52px, 125px, 107px, 125px, 159px, '../images/sprite.png', 'icon-catalog-product-2', );
 $icon-catalog-product-3-name: 'icon-catalog-product-3';
 $icon-catalog-product-3-x: 0px;
 $icon-catalog-product-3-y: 0px;
@@ -28,36 +28,14 @@ $icon-catalog-product-3-offset-y: 0px;
 $icon-catalog-product-3-width: 42px;
 $icon-catalog-product-3-height: 52px;
 $icon-catalog-product-3-total-width: 125px;
-$icon-catalog-product-3-total-height: 317px;
+$icon-catalog-product-3-total-height: 159px;
 $icon-catalog-product-3-image: '../images/sprite.png';
-$icon-catalog-product-3: (0px, 0px, 0px, 0px, 42px, 52px, 125px, 317px, '../images/sprite.png', 'icon-catalog-product-3', );
-$icon-img-catalog-product-2-name: 'icon-img-catalog-product-2';
-$icon-img-catalog-product-2-x: 0px;
-$icon-img-catalog-product-2-y: 52px;
-$icon-img-catalog-product-2-offset-x: 0px;
-$icon-img-catalog-product-2-offset-y: -52px;
-$icon-img-catalog-product-2-width: 63px;
-$icon-img-catalog-product-2-height: 54px;
-$icon-img-catalog-product-2-total-width: 125px;
-$icon-img-catalog-product-2-total-height: 317px;
-$icon-img-catalog-product-2-image: '../images/sprite.png';
-$icon-img-catalog-product-2: (0px, 52px, 0px, -52px, 63px, 54px, 125px, 317px, '../images/sprite.png', 'icon-img-catalog-product-2', );
-$icon-img-catalog-product-3-name: 'icon-img-catalog-product-3';
-$icon-img-catalog-product-3-x: 0px;
-$icon-img-catalog-product-3-y: 106px;
-$icon-img-catalog-product-3-offset-x: 0px;
-$icon-img-catalog-product-3-offset-y: -106px;
-$icon-img-catalog-product-3-width: 84px;
-$icon-img-catalog-product-3-height: 104px;
-$icon-img-catalog-product-3-total-width: 125px;
-$icon-img-catalog-product-3-total-height: 317px;
-$icon-img-catalog-product-3-image: '../images/sprite.png';
-$icon-img-catalog-product-3: (0px, 106px, 0px, -106px, 84px, 104px, 125px, 317px, '../images/sprite.png', 'icon-img-catalog-product-3', );
+$icon-catalog-product-3: (0px, 0px, 0px, 0px, 42px, 52px, 125px, 159px, '../images/sprite.png', 'icon-catalog-product-3', );
 $spritesheet-width: 125px;
-$spritesheet-height: 317px;
+$spritesheet-height: 159px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($icon-catalog-product-2, $icon-catalog-product-3, $icon-img-catalog-product-2, $icon-img-catalog-product-3, );
-$spritesheet: (125px, 317px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($icon-catalog-product-2, $icon-catalog-product-3, );
+$spritesheet: (125px, 159px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
