--- a/app/scss/components/index/main.scss
+++ b/app/scss/components/index/main.scss
@@ -96,7 +96,7 @@
               display: block;
               content: "";
               position: absolute;
-              background: url(../images/shadow-main-slider.svg);
+              background: url('../images/shadow-main-slider.svg');
               background-repeat: no-repeat;
               width: 100%;
               height: 120px;
