--- a/app/scss/components/news/list.scss
+++ b/app/scss/components/news/list.scss
@@ -88,7 +88,7 @@
     align-self: center;
     display: block;
     text-decoration: none;
-    font-family: CeraPRO;
+    font-family: 'CeraPRO';
     ///big items
 
     &:not(.small-item) {
@@ -167,6 +167,10 @@
           grid-row: auto;
         }
       }
+    }
+
+    @include screen("md", "max") {
+      &.swiper-slide { width: 70% }
     }
 
     //small items row
