--- a/app/templates/pages/about.pug
+++ b/app/templates/pages/about.pug
@@ -23,7 +23,7 @@ mixin slider-about-container-el(json)
 
 mixin main-partners-box-nav-el(json)
   each data in json
-    if(data.link == selectPage)
+    if(data.activedata == selectPage)
       a.main-partners-box-nav-link(href=data.link).active #{data.title}
     else
       a.main-partners-box-nav-link(href=data.link) #{data.title}
