--- a/app/templates/pages/news_detail.pug
+++ b/app/templates/pages/news_detail.pug
@@ -39,26 +39,27 @@ block content
     .content.news-box
       .news-header
         h2.page-title.visual-animation-base Другие новости и акции
-      .news-row
-        a.news-item.small-item.visual-animation-base-block(href="./news_detail.html")
-          .news-item-image
-          .news-content
-            .news-type Новость
-            .news-time 25.05. 
-              span 2019
-            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item.small-item.visual-animation-base-block(href="./news_detail.html")
-          .news-content
-            .news-type Новость
-            .news-time 25.05. 
-              span 2019
-            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item.small-item.visual-animation-base-block(href="./news_detail.html")
-          .news-content
-            .news-type Новость
-            .news-time 25.05. 
-              span 2019
-            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+      .news-row.swiper-container
+        .swiper-wrapper
+          a.news-item.small-item.visual-animation-base-block.swiper-slide(href="./news_detail.html")
+            .news-item-image
+            .news-content
+              .news-type Новость
+              .news-time 25.05. 
+                span 2019
+              .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+          a.news-item.small-item.visual-animation-base-block.swiper-slide(href="./news_detail.html")
+            .news-content
+              .news-type Новость
+              .news-time 25.05. 
+                span 2019
+              .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+          a.news-item.small-item.visual-animation-base-block.swiper-slide(href="./news_detail.html")
+            .news-content
+              .news-type Новость
+              .news-time 25.05. 
+                span 2019
+              .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
 
 
   +subscriptionForm().bg-white
